# 1984

./: .env  .env.example  .gitignore  docker-compose.yaml  pyproject.toml
apps/: package-lock.json
apps/back/: .env  .env.example  Dockerfile  config.py  entrypoint.sh  main.py  pyproject.toml
apps/back/back/: app.py  config.py  db.py  main.py  models.py  utils.py
apps/back/back/models/: auth.py  chanel_post.py  channel.py
apps/back/back/routes/: __init__.py  auth.py  channels.py  llm.py  posts.py  tg_auth.py  user.py  vk_auth.py
apps/back/back/users/: manager.py  models.py  schemas.py
apps/back/back/utils/: db.py  jwt.py  redis.py  token.py
apps/back/bot/: bot.py  main.py  run_bot.py
apps/bot/: .env  .env.example  config.py  entrypoint.sh  main.py  pyproject.toml
apps/bot/bot/: bot.py
apps/bot/bot/handlers/: __init__.py  chat_member.py  group_member.py  posts_router.py  start.py
apps/bot/bot/middlewares/: __init__.py  bot.py  mongo.py  redis.py
apps/bot/bot/utils/: profile_data.py
apps/front/: .dockerignore  Dockerfile  angular.json  package-lock.json  package.json  proxy.conf.json  tsconfig.json
apps/front/nginx/: nginx.conf
apps/front/src/: main.ts  styles.scss
apps/front/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts  nav.config.ts
apps/front/src/app/children/auth/: auth-routing.module.ts
apps/front/src/app/components/add-bot-instruction/: add-bot-instruction.component.html  add-bot-instruction.component.scss  add-bot-instruction.component.ts
apps/front/src/app/components/chanel-selector/: channel-selector.component.html  channel-selector.component.scss  channel-selector.component.ts
apps/front/src/app/components/channel-card/: channel-card.component.html  channel-card.component.scss  channel-card.component.ts
apps/front/src/app/components/channel-manager/: channel-manager.component.html  channel-manager.component.scss  channel-manager.component.ts
apps/front/src/app/components/file-uploader/: file-uploader.component.html  file-uploader.component.scss  file-uploader.component.ts
apps/front/src/app/directives/: telegram-auth.directive.ts  telegram-login.directive.ts
apps/front/src/app/forms/: edit-post-form.ts
apps/front/src/app/guards/: add-bot-guard.ts  auth.guard.ts  redirect-to-auth.guard.ts
apps/front/src/app/interfaces/: telegram-user.interface.ts
apps/front/src/app/mocks/: channels.mock.ts  posts.mock.ts
apps/front/src/app/models/: post-action.model.ts  post.model.ts
apps/front/src/app/pages/add-bot/: add-bot.page.ts  (+2 more)
apps/front/src/app/services/: auth.service.ts  channel.service.ts  message-interceptor.service.ts
apps/front/src/app/tokens/: app-config.token.ts  telegram-bot-id.token.ts  telegram-bot-username.token.ts  telegram-config.token.ts
apps/front/src/environments/: environment.development.ts  environment.ts
apps/front/src/styles/mixins/: bg.scss  skeleton.scss
apps/tg-bot/: .env.example  .gitignore  main.py  pyproject.toml
apps/ton/: Dockerfile  main.py  pyproject.toml
apps/ton/ton/: app.py  config.py
apps/ton/ton/executors/: sentiment_executor.py
nginx/: start.sh
nginx/conf.d/: http.conf  https.conf.template
ngrok/: .env  docker-compose.yml  nginx.conf  site.conf
notebooks/: README.md  vk.py
notebooks/tg/:  main.py  readme.md
notebooks/tg/templates/: channel.html  index.html
(+74 files in other folders)
