[project]
name = "social-sentinel"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Dorokhov",email = "seregapax@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<=3.14"

[tool.poetry.dependencies]
back = { path = "apps/back", develop = false }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
