[project]
name = "back"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Dorokhov",email = "seregapax@gmail.com"}
]
requires-python = ">=3.11,<=3.14"

[tool.poetry.scripts]
start = 'main:start'

[poetry-monoranger-plugin]
enabled = true
monorepo-root = "../../"
version-pinning-rule = '^'

[tool.poetry.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.11"}
pymongo = "^4.11.2"
pydantic-settings = "^2.8.1"
fastapi-users = {extras = ["beanie"], version = "^14.0.1"}
beanie = "^1.29.0"
motor = "^3.7.0"
pyjwt = "^2.10.1"
