[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Dorokhov", email = "seregapax@gmail.com"}
]
requires-python = ">=3.12,<4.0"

[tool.poetry.scripts]
start = 'main:start'

[tool.poetry.dependencies]
pydantic-settings = "^2.8.1"
aiogram = "^3.20.0.post0"
setuptools = "^80.9.0"
redis = "^6.2.0"
pymongo = "^4.11.2"
motor = "^3.7.0"
