[project]
name = "ton"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Dorokhov",email = "seregapax@gmail.com"}
]
requires-python = ">=3.12,<4.0"

[tool.poetry.scripts]
start = 'main:start'

[tool.poetry.dependencies]
jina = ">=3.27.17,<4.0.0"
docarray = "^0.30"
transformers = ">=4.51.3,<5.0.0"
torch = ">=2.7.0,<3.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
